syntax = "proto3";
package helloworld.v1;
option go_package = "DemoApp/api/helloworld/v1;v1";

//kratos proto client ./api/helloworld/v1/class.proto
message CreateClassRequest {
    string name = 1; 
    int64 grade = 2; 
}

message UpdateClassRequest {
    int64 id = 1; // ID của lớp học cần cập nhật
    string name = 2; // Tên lớp học mới
    int64 grade = 3; // Lớp học mới
}

message DeleteClassRequest {
    int64 id = 1; // ID của lớp học cần xóa
}

message ListClassRequest {
    uint32 page = 1; // Số trang
    uint32 page_size = 2; // Số lượng bản ghi trên mỗi trang
    optional ClassFilterRequest filter =3 ; 
}

message ExportClassExcelRequest {
    int64 id = 1;
}

message ExportClassExcelReply {
  bytes file = 1;
}

message ClassFilterRequest {
    optional string name = 3; // Tên lớp học để lọc
    optional bool is_deleted = 5; // Lọc theo trạng thái xóa
    optional string keyword = 6; // Từ khóa tìm kiếm
    optional int32 minClassTeacher = 7; // độ tuổi của giáo viên tối thiểu 
    optional int32 maxClassStudentQuantity = 8;// sĩ số học sinh tối đa
}   


message GetClassRequest {
    int64 id = 1; // ID của lớp học cần lấy thông tin
}

message ListClassReply {
    repeated ClassData items = 1;
    int64 total =2; 
}

message StudentDataForClass {
    string name = 2;
}

message TeacherDataForClass {
    string name = 1;
}



message GetClassReply {
    ClassData class = 1; // Thông tin lớp học
    repeated StudentDataForClass students = 2; // Danh sách học sinh trong lớp
    repeated TeacherDataForClass teachers =3;
    int32 students_quantity = 4; 
    int32 teachers_quantity = 5; 
}



message CreateClassReply {
    string message = 1; // Thông báo kết quả tạo lớp học
}

message UpdateClassReply {
    string message = 1; // Thông báo kết quả cập nhật lớp học
}

message DeleteClassReply {
    string message = 1; // Thông báo kết quả xóa lớp học
}


message ClassData {
    int64 id = 1;
    string name = 2;
    int64 grade = 3;
    optional bool is_deleted =4 [json_name = "is_deleted"];
}



